graphics now totally works, u can flying around now, basic hud including radar

--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ body {
 #display {
     background-color: black;
 }
+@font-face {
+    font-family: "mainfont";
+    src: url("ARCADECLASSIC.TTF");
+    font-weight: normal;
+    font-style: normal;
+}
